--- a/templates/group.html
+++ b/templates/group.html
@@ -1,20 +1,21 @@
 <!doctype html>
 <html>
-    <head>
-        <title>Записи сообщества {{group.title}} | Yatube</title>
-    </head>
-    <body>
-    <h1>{{group.title}}</h1>
-    <p>
-        {{group.description}}
-    </p>
-    {% for post in posts %}
-        <h3>
-            {{post.author}}, дата публикации: {{ post.pub_date|date:"d M Y" }}
-        </h3>
-        <p>{{post.text}}</p>
-        <hr>
-     {% endfor %}
-
+{% extends "base.html" %} 
+{% block title %}Записи сообщества {{ group.title }}{% endblock %} 
+{% block header %}{{ group.title }}{% endblock %} 
+{% block content %} 
+        <p> 
+            {{ group.description }} 
+        </p> 
+        {% for post in posts %} 
+            <h3> 
+                Автор: {{ post.author }}, дата публикации: {{ post.pub_date|date:"d M Y" }} 
+            </h3> 
+           <p> 
+               {{ post.text|linebreaksbr }} 
+           </p> 
+            <hr> 
+        {% endfor %} 
+{% endblock %} 
   </body>
 </html>
